# GoQuant_assigment

./: .env  Anchor.toml  Cargo.toml  README.md  setup.sh  test_backend.sh
backend/: Cargo.toml
backend/src/: api_tests.rs  cache.rs  config.rs  database.rs  main.rs  websocket.rs
backend/src/api/: health.rs  mod.rs  transaction.rs  vault.rs
backend/src/monitering/: metrics.rs
backend/src/services/: balance_reconciler.rs  balance_tracker.rs  cpi_manager.rs  event_listner.rs  mod.rs  transaction_builder.rs  vault_manager.rs  vault_moniter.rs
examples/: README.md
migrations/: 20260111110050_initial_schema.sql
programs/goquant_assignment/: Cargo.toml
programs/goquant_assignment/src/: error.rs  lib.rs
programs/goquant_assignment/src/instructions/: add_authorized_program.rs  deposit.rs  initialize_vault.rs  lock_collateral.rs  mod.rs  transfer_collateral.rs  unlock_collateral.rs  withdraw.rs
programs/goquant_assignment/src/states/: events.rs  mod.rs  vault.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  models.rs  utils.rs
tests/: goquant_assignment.ts
