[workspace]
members = [ "backend",
    "programs/*"
, "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Prakhar Shrivastava prakharshri18@gmail.com"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
anyhow = "1.0"
thiserror = "2.0"

chrono = { version = "0.4", features = ["serde"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
