[package]
name = "goquant_assignment"
version = "0.1.0"
description = "Collateral Vault Management System For Perpetual Futures DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goquant_assignment"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
